--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.com/mohamedsameh26/store.git",
   "name": "e-commerce-class",
   "version": "0.1.0",
   "private": true,
